package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedCommentModerationCheck;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "commentModerationCheck")
public class CommentModerationCheck extends GeneratedCommentModerationCheck {
}
