package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedParticipationPolicy;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "participationPolicy")
public class ParticipationPolicy extends GeneratedParticipationPolicy {
}
