package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedPostModerationCheck;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "postModerationCheck")
public class PostModerationCheck extends GeneratedPostModerationCheck {
}
