package pt.isep.enorm.ref.domain;

import pt.isep.enorm.ref.domain.generated.GeneratedContentValidationRule;
import jakarta.persistence.Entity;
import jakarta.persistence.Table;

@Entity
@Table(name = "contentValidationRule")
public class ContentValidationRule extends GeneratedContentValidationRule {
}
