@startuml
title RedditScenario v1.0.0 - Structure Diagram

' ===== RESOURCE TYPES =====
class "Subreddit" as rt_0 << (R,#FF7700) >> {
  id: TEXT [required]
  name: TEXT [required]
  description: TEXT
}
class "Content" as rt_1 << (R,#FF7700) >> {
  id: TEXT [required]
  creationDate: DATE [required]
}
class "Post" as rt_2 << (R,#FF7700) >> {
  title: TEXT [required]
  body: TEXT [required]
  type: TEXT [required]
  supportsVote: BOOLEAN [required]
  supportsReport: BOOLEAN [required]
}
class "Comment" as rt_3 << (R,#FF7700) >> {
  body: TEXT [required]
  supportsVote: BOOLEAN [required]
  supportsReport: BOOLEAN [required]
}
class "MediaAttachment" as rt_4 << (R,#FF7700) >> {
  id: TEXT [required]
  type: TEXT [required]
  url: URL [required]
}
class "CommunityRule" as rt_5 << (R,#FF7700) >> {
  id: TEXT [required]
  title: TEXT [required]
  description: TEXT [required]
}
class "ParticipationPolicy" as rt_6 << (R,#FF7700) >> {
  id: TEXT [required]
  action: TEXT [required]
  allowedWhen: TEXT [required]
}
class "ContentValidationRule" as rt_7 << (R,#FF7700) >> {
  id: TEXT [required]
  target: TEXT [required]
  severity: TEXT [required]
  condition: TEXT [required]
}
class "PostModerationCheck" as rt_8 << (R,#FF7700) >> {
  id: TEXT [required]
  type: TEXT [required]
  result: TEXT [required]
  timestamp: DATE [required]
}
class "CommentModerationCheck" as rt_9 << (R,#FF7700) >> {
  id: TEXT [required]
  type: TEXT [required]
  result: TEXT [required]
  timestamp: DATE [required]
}

' ===== USER TYPES =====
class "User" as ut_0 << (U,#00CCFF) >> {
  kind: GENERIC
}
class "Moderator" as ut_1 << (U,#00CCFF) >> {
  kind: MODERATOR
}

' ===== FEEDBACK TYPES =====
class "Vote" as ft_0 << (F,#00FF00) >> {
  kind: VOTE
}
class "Report" as ft_1 << (F,#00FF00) >> {
  kind: REPORT
}

' ===== FEEDBACK DEFINITIONS =====
class "VoteOnContent" as fd_0 << (D,#CCFFCC) >>
class "ReportOnContent" as fd_1 << (D,#CCFFCC) >>

' ===== RELATIONSHIPS =====
rt_0 "1" --> "*" rt_2
rt_0 "1" --> "*" rt_5
rt_0 "1" --> "*" rt_6
rt_0 "1" --> "*" rt_7
rt_3 "*" --> "1" rt_2
rt_3 "0..1" --> "*" rt_3
rt_3 "1" --> "*" rt_4
rt_2 "1" --> "*" rt_8
rt_3 "1" --> "*" rt_9

ft_0 *--> fd_0: feedback
fd_0 --> ut_0: author
fd_0 --> rt_1: subjectResource
ft_1 *--> fd_1: feedback
fd_1 --> ut_0: author
fd_1 --> rt_1: subjectResource
@enduml
